Fix line z-index to prevent coverage

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,8 @@ header {
     flex-grow: 1;
     height: 1px;
     background-color: #333;
+    position: relative;
+    z-index: 5;
 }
 
 .section-title {
